gitops/apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
        - name: api
          image: faizalaccount/feedback-api:v2
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3


          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
