gitops/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-api
spec:
  selector:
    app: feedback-api
  ports:
    -  port: 80
       targetPort: 5000
