gitops/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedback-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: feedback.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: feedback-api
            port:
              number: 80
